--- a/css/style.css
+++ b/css/style.css
@@ -71,28 +71,9 @@ header{
     background-position: center;
 
 }
-/*header label{
-    text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    color: #fff;
-}
-header a{
-    text-decoration: none;
-}
-header nav ul{
-    list-style: none;
-}
-header nav ul li a{
-    color: #fff;
-}
-*/
 
 .wrapper{
-    /*margin: 100px auto;*/
     width: 70px;
-    /*background-color: transparent;*/
     position: relative;
     color: #fff;
     text-align: center;
@@ -111,7 +92,6 @@ label{
     position: absolute;
     top: 0;
     right: 24px;
-    /*left: 0;*/
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -367,9 +347,10 @@ h3{
     font-size: 44px;
     margin-bottom: 56px;
 }
-/*.contact-us iframe{
-    border: none;
-}*/
+.contact-us .map{
+    max-width: 767px;
+    max-height: 295px;
+}
 .contact-us .d-flex{
     justify-content: space-between;
     flex-wrap: wrap;
