--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ header{
     background-image: url('../images/header_01.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .arrow_mobile{
